# VFSForGit

MirrorProvider/MirrorProvider.Linux/: MirrorProvider.Linux.csproj
ProjFS.Linux/PrjFSLib.Linux.Managed/: CallbackDelegates.cs  VirtualizationInstance.cs
ProjFS.Linux/PrjFSLib.Linux.Managed/Interop/: PrjFSLib.cs  ProjFS.cs
ProjFS.Linux/Scripts/: Build.sh
ProjFS.Linux/libprojfs-vfsapi/: .gitignore  Makefile.am  configure.ac
ProjFS.Linux/libprojfs-vfsapi/include/: Makefile.am
ProjFS.Linux/libprojfs-vfsapi/lib/: Makefile.am  projfs_vfsapi.c
